--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Tunis Store</string>
+    <string name="app_name">Tounsi Store</string>
     <string name="nom_app">Nom App</string>
     <string name="bienvenue_dans_appla_tn_t_l_chargez_vos_apps_en_dinars">Bienvenue dans Appla TN - Téléchargez vos apps en dinars !</string>
 </resources>
